--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shadowble.github.io/accueil/*",
+  "homepage": "https://shadowble.github.io/accueil",
   "name": "accesport",
   "version": "0.1.0",
   "private": true,
